syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUserByIdResponse {
  int32 id = 1;
  string email = 2;
  string name = 3;
  string created_at = 4;
}
